enhanced my profile with a fixed sidebar

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
   </head>
   <body>
     <div id="sidebar">
-      <a href="#presentation"></a>
-      <a href="#project_to_speech"></a>
-      <a href="#favorite-movies"></a>
-      <a href="#about"></a>
+      <a href="#presentation">
+        <i class="fa fa-female fa-2x" aria-hidden="true"></i>
+      </a>
+      <a href="#project_to_speech">
+        <i class="fa fa-rocket fa-2x" aria-hidden="true"></i>
+      </a>
+      <a href="#favorite-movies">
+        <i class="fa fa-film fa-2x" aria-hidden="true"></i>
+      </a>
+      <a href="#about">
+        <i class="fa fa-question" aria-hidden="true"></i>
+      </a>
     </div>
     <div id="page-content">
       <div class="container">
