enhanced my profile with a fixed sidebar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="#project_to_speech">
         <i class="fa fa-rocket fa-4x" aria-hidden="true"></i>
       </a>
-      <a href="#favorite-movies">
+      <a href="#favorites-movies">
         <i class="fa fa-film fa-4x" aria-hidden="true"></i>
       </a>
       <a href="#about">
