enhanced my profile with a fixed sidebar

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
         </div>
 
-        <div id="favorites_movies"  class="card">
+        <div id="favorites-movies" class="card">
           <h2>My favorites movies</h2>
           <section>
             <div class="flex_movies_img">
