enhanced my profile with a fixed sidebar

--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
         <div id="social_link" class="card">
           <ul class="list-inline">
             <li>
-              <a href="#">
+              <a href="https://fr-fr.facebook.com/">
                 <i class="fa fa-facebook fa-2x" aria-hidden="true"></i><br>Facebook
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="https://www.instagram.com/?hl=fr">
                 <i class="fa fa-instagram fa-2x" aria-hidden="true"></i><br>Instagram
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="https://github.com/AurelDbs/profile">
                 <i class="fa fa-github fa-2x" aria-hidden="true"></i><br>Github
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="https://www.linkedin.com/in/aur%C3%A9lie-dubuis-1a9788b4">
                 <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i><br>LinkedIn
               </a>
             </li>
